# authme

./: .gitignore  README.md  license-attributions
authme-android/app/: build.gradle  proguard-rules.pro
authme-android/app/src/androidTest/java/org/authme/authme/: ApplicationTest.java
authme-android/app/src/main/: AndroidManifest.xml
authme-android/app/src/main/java/org/authme/android/core/: AuthListAdapter.java  AuthListFragment.java  AuthMeApplication.java  AuthmeMainActivity.java  ConfigurationActivity.java  ConfigurationFragment.java  DeviceListAdapter.java  DeviceListFragment.java  NavigationDrawerFragment.java
authme-android/app/src/main/java/org/authme/android/gcm/: GCMIntentService.java  GCMReceiver.java  GCMService.java  GCMUtils.java
authme-android/app/src/main/java/org/authme/android/service/: AuthMeService.java  AuthMeServiceInitialiser.java  AuthMeServiceManager.java  AuthMeServiceTask.java  AuthMeSign.java  AuthUpdater.java  DeviceUpdater.java  MasterPassword.java
authme-android/app/src/main/java/org/authme/android/util/: AuthMeHttpClient.java  EncryptedEditTextPreference.java  KCV.java
authme-android/app/src/main/res/drawable/: icon_main_tab_cabinet.xml
authme-android/app/src/main/res/drawable-hdpi/: auth_selector.xml  background_gradient.xml  background_selected.xml
authme-android/app/src/main/res/layout/: auth_list.xml  auth_list_item.xml  authme_main.xml  device_list.xml  fragment_authme_main.xml  fragment_main.xml  fragment_navigation_drawer.xml  main.xml
authme-android/app/src/main/res/menu/: menu_authme_main.xml
authme-android/app/src/main/res/values/: AuthMeService.xml  strings.xml  strings_config.xml  styles.xml
authme-android/app/src/main/res/xml/: pref_debug.xml  pref_service.xml
authme-iphone/AuthMe/: AuthMe.entitlements  AuthMe.storyboard  AuthMeAppDelegate.swift  ConfigurationSetup.plist  Info.plist  ServiceConfig.plist
authme-iphone/AuthMe.xcodeproj/: project.pbxproj
authme-iphone/AuthMe/AuthMe.xcdatamodeld/: .xccurrentversion
authme-iphone/AuthMe/AuthMe.xcdatamodeld/AuthMe 0.02.xcdatamodel/: contents
authme-iphone/AuthMe/AuthMe.xcdatamodeld/AuthMe.xcdatamodel/: contents
authme-iphone/AuthMe/Base.lproj/: LaunchScreen.xib
authme-iphone/AuthMe/Images.xcassets/AuthMe-Nav-Reload.imageset/: Contents.json
authme-iphone/AuthMe/Src/: AppConfiguration.swift  MasterPassword.swift  ObjectiveCBridgingHeader.h
authme-iphone/AuthMe/Src/Controllers/: AuthListController.swift  ConfigurationDetailMenuController.swift  ConfigurationMainMenuController.swift  ConfigurationSplitViewController.swift  DeviceListController.swift
authme-iphone/AuthMe/Src/Crypto/: AESKey.h  AESKey.m  Base64.h  Base64.m  KeyChainPassword.h  KeyChainPassword.m  PKCS5PBBKDF2.h  PKCS5PBBKDF2.m  RSAKey.h  RSAKey.m
authme-iphone/AuthMe/Src/Entity/: AuthMeConfiguration.swift  Configuration.swift
authme-iphone/AuthMe/Src/Service/: AuthMeService.swift  AuthMeServiceDelegate.swift  AuthMeServiceInitialiser.swift  AuthMeServiceOperation.swift  AuthMeSign.swift  AuthMeSignDelegate.swift
authme-iphone/AuthMe/Src/Service/Model/: DeviceInfo.swift  SvcSession.swift
authme-iphone/AuthMe/Src/Util/: Log.swift
authme-iphone/AuthMeTests/: AuthMeTests.swift  CryptoTests.swift
authme-unix/: .gitignore  AUTHORS  CHANGES  ChangeLog  Makefile.am  Makefile.in  NEWS  README  autogen.sh  configure  configure.ac  pauthme-0.1.pc.in
authme-unix/src/: Makefile.am  Makefile.in  authme.c  cnffile.c  config.c  config.h.in  httpc.c  httpc.h  httpc_curl.c  httpc_curl.h  json.c  json.h  mpass.c  mpass.h  mpass_openssl.c  mpass_openssl.h  pauthme.c  pauthme.h  service.c  service.h  utils.c  utils.h
authme-windows/: AuthMe.sln
authme-windows/AuthMeCmd/: AuthMeCmd.vcxproj  AuthMeCmd.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
authme-windows/AuthMeDLL/: AssemblyInfo.cpp  AuthMeDLL.cpp  AuthMeDLL.h  AuthMeDLL.vcxproj  AuthMeDLL.vcxproj.filters  ReadMe.txt  Stdafx.cpp
authme-windows/AuthMeGUI/: AboutWindows.xaml  AboutWindows.xaml.cs  App.xaml  App.xaml.cs  AuthMeGUI.csproj  AuthmePropertyPageInterface.cs  DecryptFileWindow.xaml  DecryptFileWindow.xaml.cs  EncryptFileWindow.xaml  EncryptFileWindow.xaml.cs  KeyGenerationParametersWindow.xaml  KeyGenerationParametersWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PreferencesWindow.xaml  PreferencesWindow.xaml.cs  PropertiesLocalKeysPage.xaml  PropertiesLocalKeysPage.xaml.cs  PropertiesServiceSettingsPage.xaml  PropertiesServiceSettingsPage.xaml.cs
authme-windows/AuthMeGUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
authme-windows/AuthMeGUISetup/: AuthMeGUISetup.wixproj  LICENSE.rtf  Product.wxs
authme-windows/AuthMeLib/: AuthMeLib.vcxproj  AuthMeLib.vcxproj.filters  AuthMeWindows.cpp  AuthMeWindows.h  ReadMe.txt  helpers.cpp  helpers.h  httpc_windows.c  httpc_windows.h  logging.cpp  logging.h  mpass_windows.c  mpass_windows.h  stdafx.cpp  stdafx.h
